# TCU-Code

./: .gitignore  README.md  main.py  pyproject.toml
Src/: pilot.py  pilot.spec  requirments.txt
Src/Camera/: camera.py  stream.py
Src/Controls/: grippers.py  move.py
Src/Images/: res.qrc
Src/Modes/: modes.py
Src/Pilot/: findChild.py
Src/Sensors/: readings.py
Src/Status/: status.py
Src/Stopwatch/: stopwatch.py
Src/communication/: __init__.py  companion_link.py
Src/joystick/: __init__.py  joystick.py  joystick_mapper.py  message.py
src/: __init__.py  pilot.py  pilot.ui
src/Pilot/: __init__.py  findChild.py
src/app/: __init__.py
src/app/Camera/: ArucoMarkerDetector.py  Client.py  VideoRecorder.py  camera.py  stream.py
src/app/Controls/: grippers.py  move.py
src/app/Modes/: modes.py
src/app/Sensors/: compass.py  readings.py
src/app/Status/: status.py
src/app/Stopwatch/: stopwatch.py
src/clientrecord/: ClientRecorder.py
src/communication/: __init__.py  companion_link.py  mavproxy_link.py  message.py  sensor_message.py
src/joystick/: __init__.py  configurations.json  joystick.py  joystick_mapper.py
src/pixhawk/: pixhawk.py  pixhawk_sensors.py
src/ui/: design.py  new.ui  newDesign.py  pilot.ui
src/underwater/: main.py
test/: StreamGearTestClient.py  StreamGearTestServer.py  index.html  rtcStreamServer.py  temptext.txt
