[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tcu"
version = "1.0.0"

dependencies = [
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "colorama==0.4.6",
    "colorlog==6.8.2",
    "cycler==0.12.1",
    "Cython==3.0.10",
    "depthai==2.25.0.0",
    "fonttools==4.51.0",
    "idna==3.7",
    "kiwisolver==1.4.5",
    "opencv-python==4.9.0.80",
    "packaging==24.0",
    "pillow==10.3.0",
    "pygame==2.5.2",
    "pyparsing==3.1.2",
    "PyQt5==5.15.10",
    "PyQt5-Qt5==5.15.2",
    "PyQt5-sip==12.13.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "pyzmq==25.1.2",
    "requests==2.31.0",
    "simplejpeg==1.7.2",
    "six==1.16.0",
    "tqdm==4.66.2",
    "tzdata==2024.1",
    "urllib3==2.2.1",
    "vidgear==0.3.2",
]
